# tauri-plugin-persistence

./: .gitignore  Cargo.toml  LICENSE
.cargo/: cargo.toml
tauri-plugin-persistence/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-persistence/examples/persistence-examples/: package.json  pnpm-lock.yaml  vite.config.ts
tauri-plugin-persistence/examples/persistence-examples/src/: App.tsx  util.tsx
tauri-plugin-persistence/examples/persistence-examples/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-persistence/examples/persistence-examples/src-tauri/capabilities/: default.json
tauri-plugin-persistence/examples/persistence-examples/src-tauri/src/: lib.rs  main.rs
tauri-plugin-persistence/examples/tauri-app/: package.json
tauri-plugin-persistence/examples/tauri-app/src/: App.svelte
tauri-plugin-persistence/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-persistence/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-persistence/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-persistence/guest-js/: commands.ts  context.ts  index.ts  util.ts
tauri-plugin-persistence/permissions/: default.toml  sets.toml
tauri-plugin-persistence/permissions/autogenerated/: reference.md
tauri-plugin-persistence/permissions/autogenerated/commands/: collection_count_documents.toml  collection_create_index.toml  collection_delete_documents.toml  collection_drop.toml  collection_drop_index.toml  collection_find_many_documents.toml  collection_find_one_document.toml  collection_insert_documents.toml  collection_update_documents.toml  context.toml  create_directory.toml  database.toml  database_close.toml  database_commit_transaction.toml  database_get_collections.toml  database_rollback_transaction.toml  database_start_transaction.toml  file_close.toml  file_handle.toml  file_metadata.toml  file_read_bytes.toml  file_read_text.toml  file_write_bytes.toml  file_write_text.toml  get_absolute_path_to.toml  get_context_base_path.toml  list_directory.toml  remove_directory.toml
tauri-plugin-persistence/permissions/schemas/: schema.json
tauri-plugin-persistence/permissions/sets/: database.toml  filehandle.toml  filesystem.toml
tauri-plugin-persistence/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
tauri-plugin-persistence/src/api/: context.rs  error.rs  mod.rs  state.rs  types.rs
