[package]
name = "tauri-plugin-persistence"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-persistence"

[dependencies]
tauri = { version = "2.4.1" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
polodb_core = "5.1.3"
tokio = { version = "1.44.2", features = ["full"] }
bson = { version = "2.14.0", features = ["chrono-0_4", "serde_with"] }
serde_with = { version = "3.12.0", features = ["base64", "chrono_0_4", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }
figment = { version = "0.10.19", features = ["json", "toml", "yaml"], optional = true }
notify = { version = "8.0.0", features = ["serde"] }
base64 = "0.22.1"

[build-dependencies]
tauri-plugin = { version = "2.1.1", features = ["build"] }

[features]
figment = ["dep:figment"]
