[package]
name = "tauri-plugin-persistence"
version = "0.1.0"
authors = [ "Dax Harris" ]
description = "A wrapper plugin for several persistence backends, focused on managing complex project folders with less boilerplate."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-persistence"
license = "MIT"
repository = "https://github.com/dax-dot-gay/tauri-plugin-persistence"
homepage = "https://github.com/dax-dot-gay/tauri-plugin-persistence"
keywords = ["tauri", "polodb", "tauri-plugin", "native-apps"]
categories = ["asynchronous", "web-programming", "database", "filesystem"]
readme = "README.md"

[dependencies]
tauri = { version = "2.4.1" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
polodb_core = "5.1.3"
tokio = { version = "1.44.2", features = ["full"] }
bson = { version = "2.14.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.40", features = ["serde"] }
anyhow = "1.0.98"
async-dup = "1.2.4"
specta-typescript = "=0.0.9"
specta = { version = "=2.0.0-rc.22", features = ["serde", "export", "chrono", "bson", "tokio", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"]}
serde_json = "1.0.140"
mime_guess = "2.0.5"


[build-dependencies]
tauri-plugin = { version = "2.1.1", features = ["build"] }
